fixes in validations

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
                 <!-- FORM START -->
                 <div class="contact__form">
-                    <form action="#" class="custom-form">
+                    <form action="#" class="custom-form" id="reservationForm">
                         <div class="reservation__form-row">
                             <div class="reservation__form-group">
                                 <div class="reservation__form-item">
@@ -72,7 +72,7 @@
                                 </div>
                                 <div class="reservation__form-item">
                                     <label class="form-label" for="telefono">Número de teléfono</label>
-                                    <input class="form-control" type="tel" name="telefono" id="telefono" placeholder="11-4555-6677">
+                                    <input class="form-control" type="number" name="telefono" id="telefono" placeholder="11-4555-6677">
                                 </div>
                                 <div class="reservation__form-item">
                                     <label class="form-label" for="fecha">Fecha</label>
@@ -395,6 +395,7 @@
     
     <!-- SCRIPTS -->
     <script src="../js/main.js"></script>
+    <script src="../js/reserva.js"></script>
 
 </body>
 </html>
