fixes validation issues

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -94,7 +94,7 @@
                 </div>
                 <div class="reservation__form-item">
                   <label class="form-label" for="horario">Horario</label>
-                  <input class="form-control" type="time" name="horario" id="horario" placeholder="Horario">
+                  <input class="form-control" type="time" name="horario" id="horario" placeholder="Horario" min="08:00" max="23:30">
                 </div>
               </div>
             </div>
@@ -142,8 +142,7 @@
             </div>
             <div>
               <label for="contact-phone" class="form-label">Número de teléfono</label>
-              <input type="number" name="contact-phone" id="contact-phone" class="form-control"
-                placeholder="Tu teléfono" />
+              <input type="number" name="contact-phone" id="contact-phone" class="form-control" placeholder="Tu teléfono"/>
               <span id="contact-phoneError" class="error"></span>
             </div>
             <div>
