--- a/pages/menu.html
+++ b/pages/menu.html
@@ -64,46 +64,46 @@
                 <!-- FORM START -->
                 <div class="contact__form">
                     <form action="#" class="custom-form" id="reservationForm">
-                        <div class="reservation__form-row">
-                            <div class="reservation__form-group">
-                                <div class="reservation__form-item">
-                                    <label class="form-label" for="nombres">Nombre completo</label>
-                                    <input class="form-control" type="text" name="nombres" id="nombres" placeholder="Su nombre">
-                                </div>
-                                <div class="reservation__form-item">
-                                    <label class="form-label" for="telefono">Número de teléfono</label>
-                                    <input class="form-control" type="number" name="telefono" id="telefono" placeholder="11-4555-6677">
-                                </div>
-                                <div class="reservation__form-item">
-                                    <label class="form-label" for="fecha">Fecha</label>
-                                    <input class="form-control" type="date" name="fecha" id="fecha">
-                                </div>
-                            </div>
-                            <div class="reservation__form-group">
-                                <div class="reservation__form-item">
-                                    <label class="form-label" for="email">Correo electrónico</label>
-                                    <input class="form-control" type="email" name="email" id="email" placeholder="email@email.com">
-                                </div>
-                                <div class="reservation__form-item">
-                                    <label class="form-label" for="comensales">Número de personas</label>
-                                    <input class="form-control" type="number" name="comensales" id="comensales" placeholder="Cantidad">
-                                </div>
-                                <div class="reservation__form-item">
-                                    <label class="form-label" for="horario">Horario</label>
-                                    <input class="form-control" type="time" name="horario" id="horario" placeholder="Horario">
-                                </div>
-                            </div>
+                    <div class="reservation__form-row">
+                        <div class="reservation__form-group">
+                        <div class="reservation__form-item">
+                            <label class="form-label" for="nombres">Nombre completo</label>
+                            <input class="form-control" type="text" name="nombres" id="nombres" placeholder="Su nombre">
                         </div>
-                        <div>
-                            <label for="contact-message" class="form-label">Mensaje</label>
-                            <textarea name="contact-message" id="contact-message" rows="5" class="form-control form-control-area"
-                                placeholder="Tu mensaje"></textarea>
+                        <div class="reservation__form-item">
+                            <label class="form-label" for="telefono">Número de teléfono</label>
+                            <input class="form-control" type="number" name="telefono" id="telefono" placeholder="11-4555-6677">
                         </div>
-                        <div class="col-12">
-                            <button type="submit" class="form-control">
-                                Enviar Mensaje
-                            </button>
+                        <div class="reservation__form-item">
+                            <label class="form-label" for="fecha">Fecha</label>
+                            <input class="form-control" type="date" name="fecha" id="fecha">
                         </div>
+                        </div>
+                        <div class="reservation__form-group">
+                        <div class="reservation__form-item">
+                            <label class="form-label" for="email">Correo electrónico</label>
+                            <input class="form-control" type="email" name="email" id="email" placeholder="email@email.com">
+                        </div>
+                        <div class="reservation__form-item">
+                            <label class="form-label" for="comensales">Número de personas</label>
+                            <input class="form-control" type="number" name="comensales" id="comensales" placeholder="Cantidad" min="1" max="10">
+                        </div>
+                        <div class="reservation__form-item">
+                            <label class="form-label" for="horario">Horario</label>
+                            <input class="form-control" type="time" name="horario" id="horario" placeholder="Horario" min="08:00" max="23:30">
+                        </div>
+                        </div>
+                    </div>
+                    <div>
+                        <label for="contact-message" class="form-label">Mensaje</label>
+                        <textarea name="contact-message" id="contact-message" rows="5" cols="3"
+                        class="form-control form-control-area" placeholder="Tu mensaje"></textarea>
+                    </div>
+                    <div class="col-12">
+                        <button type="submit" class="form-control">
+                        Enviar Mensaje
+                        </button>
+                    </div>
                     </form>
                 </div>
                 <!-- imagen -->
