--- a/pages/story.html
+++ b/pages/story.html
@@ -89,18 +89,18 @@
                 </div>
                 <div class="reservation__form-item">
                   <label class="form-label" for="comensales">Número de personas</label>
-                  <input class="form-control" type="number" name="comensales" id="comensales" placeholder="Cantidad">
+                  <input class="form-control" type="number" name="comensales" id="comensales" placeholder="Cantidad" min="1" max="10">
                 </div>
                 <div class="reservation__form-item">
                   <label class="form-label" for="horario">Horario</label>
-                  <input class="form-control" type="time" name="horario" id="horario" placeholder="Horario">
+                  <input class="form-control" type="time" name="horario" id="horario" placeholder="Horario" min="08:00" max="23:30">
                 </div>
               </div>
             </div>
             <div>
               <label for="contact-message" class="form-label">Mensaje</label>
-              <textarea name="contact-message" id="contact-message" rows="5" class="form-control form-control-area"
-                placeholder="Tu mensaje"></textarea>
+              <textarea name="contact-message" id="contact-message" rows="5" cols="3"
+                class="form-control form-control-area" placeholder="Tu mensaje"></textarea>
             </div>
             <div class="col-12">
               <button type="submit" class="form-control">
