clean up and organization code

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./css/header.css">
     <link rel="stylesheet" href="./css/home.css">
@@ -52,8 +52,8 @@
         </nav>
     </header>
 
-    <!-- empieza modal -->
-    <main class="reservacion hideReservacion fade-in-top" id="openReservacion">
+    <!-- empieza modal de reservacion -->
+    <aside class="reservacion hideReservacion fade-in-top" id="openReservacion">
         <section class="reservacion__main contact__main">
             <div class="reservacion__head">
                 <h2 class="contact__main-title">Reservar una mesa</h2>
@@ -61,7 +61,6 @@
             </div>
             <div class="contact__container reservacion__container">
 
-                <!-- FORM START -->
                 <div class="contact__form">
                     <form action="#" class="custom-form" id="reservationForm">
                     <div class="reservation__form-row">
@@ -106,12 +105,12 @@
                     </div>
                     </form>
                 </div>
-                <!-- imagen -->
+
                 <div class=" reservacion__img">
                 </div>
             </div>
         </section>
-    </main>
+    </aside>
     <!-- termina modal -->
 
     <!-- MAIN START -->
