--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="es">
-
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/main.css" />
   <link rel="stylesheet" href="../css/header.css">
   <link rel="stylesheet" href="../css/footer.css">
@@ -57,7 +56,7 @@
   </header>
 
   <!-- empieza modal -->
-  <main class="reservacion hideReservacion fade-in-top" id="openReservacion">
+  <aside class="reservacion hideReservacion fade-in-top" id="openReservacion">
     <section class="reservacion__main contact__main">
       <div class="reservacion__head">
         <h2 class="contact__main-title">Reservar una mesa</h2>
@@ -65,7 +64,6 @@
       </div>
       <div class="contact__container reservacion__container">
 
-        <!-- FORM START -->
         <div class="contact__form">
           <form action="#" class="custom-form" id="reservationForm">
             <div class="reservation__form-row">
@@ -110,12 +108,11 @@
             </div>
           </form>
         </div>
-        <!-- imagen -->
         <div class=" reservacion__img">
         </div>
       </div>
     </section>
-  </main>
+  </aside>
   <!-- termina modal -->
 
   <!-- MAIN START -->
@@ -243,6 +240,7 @@
   </footer>
 
   <!-- Script -->
+  <script src="../js/mapa.js"></script>
   <script src="../js/main.js"></script>
   <script src="../js/validate.js"></script>
   <script src="../js/reserva.js"></script>
