--- a/pages/menu.html
+++ b/pages/menu.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/main.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/menu.css">
@@ -53,7 +53,7 @@
     </header>
 
     <!-- empieza modal -->
-    <main class="reservacion hideReservacion fade-in-top" id="openReservacion">
+    <aside class="reservacion hideReservacion fade-in-top" id="openReservacion">
         <section class="reservacion__main contact__main">
             <div class="reservacion__head">
                 <h2 class="contact__main-title">Reservar una mesa</h2>
@@ -111,7 +111,7 @@
                 </div>
             </div>
         </section>
-    </main>
+    </aside>
     <!-- termina modal -->
 
 
@@ -261,8 +261,6 @@
 
             </div>
         </section>
-
-
 
         <section class="section-main">
             <div class="section-title">
