--- a/pages/story.html
+++ b/pages/story.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
-
+<html lang="es">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=, initial-scale=1.0">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/main.css" />
   <link rel="stylesheet" href="../css/header.css">
   <link rel="stylesheet" href="../css/footer.css">
@@ -56,7 +55,7 @@
   </header>
 
   <!-- empieza modal -->
-  <main class="reservacion hideReservacion fade-in-top" id="openReservacion">
+  <aside class="reservacion hideReservacion fade-in-top" id="openReservacion">
     <section class="reservacion__main contact__main">
       <div class="reservacion__head">
         <h2 class="contact__main-title">Reservar una mesa</h2>
@@ -114,7 +113,7 @@
         </div>
       </div>
     </section>
-  </main>
+  </aside>
   <!-- termina modal -->
 
   <main class="story">
@@ -171,7 +170,6 @@
             <img src="../assets/images/team/team03.jpg" alt="imagen equipo" class="story__team-image" />
             <h3 class="story__team-heading">Luciano</h3>
             <p class="story__team-description">Chef en Jefe</p>
-
           </div>
         </div>
       </div>
@@ -241,6 +239,7 @@
     </section>
   </footer>
 
+  <!-- SCRIPTS -->
   <script src="../js/main.js"></script>
   <script src="../js/suscribe.js"></script>
   <script src="../js/reserva.js"></script>
