--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <link rel="stylesheet" href="./css/contacto.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" 
     rel="stylesheet" />
-    <link rel="shortcut icon" href="./assets/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/favicon.png" type="image/png">
     <title>Flippo - Resto & Bar gourmet</title>
-    <meta name="descripción" content="Filippo: Restaurante y bar en un lugar muy agradable que ofrece almuerzos y cenas variadas de calidad gourmet. Elaboramos nuestros platos con ingredientes frescos y sanos, incluyendo opciones vegetarianas y veganas.">
+    <meta name="description" content="Filippo: Restaurante y bar en un lugar muy agradable que ofrece almuerzos y cenas variadas de calidad gourmet. Elaboramos nuestros platos con ingredientes frescos y sanos, incluyendo opciones vegetarianas y veganas.">
     <meta name="keywords" content="Filippo, restaurante, bar, almuerzo, cena, gourmet, ingredientes frescos, comida saludable, comida vegetariana, comida vegana, Buenos Aires">
     <meta property="og:title" content="Filippo - Restaurante y Bar" />
     <meta property="og:type" content="website"/>
@@ -26,7 +26,7 @@
     <!-- NAV START -->
     <header>
         <nav class="nav fade-in-top">
-            <a href="../index.html" class="nav__link">
+            <a href="../index.html" class="nav__link" aria-label="Inicio">
                 <img class="nav__link-favicon" src="./assets/favicon.png" alt="">
                 <img class="nav__link-img" src="../assets/logo.png" alt="logo del negocio">
             </a>
@@ -44,8 +44,8 @@
                     <li class="nav__item">
                         <a class="nav__item-link" href="./pages/contacto.html">Contacto</a>
                     </li>
-                    <button class="nav__button nav__button_hide openReservacionResp">Reservar</button>
                 </ul>
+                <button class="nav__button nav__button_hide openReservacionResp">Reservar</button>
             </div>
             <button class="nav__button-menu"><i class="ri-menu-line"></i></button>
             <button class="nav__button openReservacion">Reservar</button>
@@ -57,7 +57,7 @@
         <section class="reservacion__main contact__main">
             <div class="reservacion__head">
                 <h2 class="contact__main-title">Reservar una mesa</h2>
-                <button id="closeReservation">X</button>
+                <button id="closeReservation" aria-label="Cerrar reservación">X</button>
             </div>
             <div class="contact__container reservacion__container">
 
@@ -89,7 +89,7 @@
                         </div>
                         <div class="reservation__form-item">
                             <label class="form-label" for="horario">Horario</label>
-                            <input class="form-control" type="time" name="horario" id="horario" placeholder="Horario" min="08:00" max="23:30">
+                            <input class="form-control" type="time" name="horario" id="horario" aria-label="Seleccione el horario" min="08:00" max="23:30">
                         </div>
                         </div>
                     </div>
@@ -117,7 +117,7 @@
     <!-- HEAD AND VIDEO -->
     <main>
         <section class="main__section">
-            <video width="100%" height="550px" class="section__video" autoplay muted poster loop >
+            <video class="section__video" autoplay muted poster="./assets/poster.jpg" loop >
                 <source src="./assets/production_ID_3769033.mp4" type="video/mp4">
                 Su navegador no soporta este formato de video.
             </video>
