--- a/index.html
+++ b/index.html
@@ -154,20 +154,20 @@
                         <span class="tag card__tag">Desayuno</span>
                     </div>
                     <div class="card__info">
-                        <div>
-                            <h4>Mañana fresca</h4>
-                            <p><small>$</small>12.50</p>
+                        <div class="news__header">
+                            <h4 class="news__title">Mañana fresca</h4>
+                            <p class="card__price"><small>$</small>12.50</p>
                         </div>
-                        <div>
-                            <h6>4.3/5</h6>
-                            <div>
+                        <div class="card__rating">
+                            <h6 class="card__rating-title">4.3/5</h6>
+                            <div class="card__rating-star">
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-line"></i>
                             </div>
-                            <p>102 reseñas</p>
+                            <p class="card__rating-review">102 reseñas</p>
                         </div>
                     </div>
                 </div>
@@ -178,20 +178,20 @@
                         <span class="tag card__tag">Almuerzo</span>
                     </div>
                     <div class="card__info">
-                        <div>
-                            <h4>Sopa Tooplate</h4>
-                            <p><small>$</small>24.50</p>
+                        <div class="news__header">
+                            <h4 class="news__title">Sopa Tooplate</h4>
+                            <p class="card__price"><small>$</small>24.50</p>
                         </div>
-                        <div>
-                            <h6>3.5/5</h6>
-                            <div>
+                        <div class="card__rating">
+                            <h6 class="card__rating-title">3.5/5</h6>
+                            <div class="card__rating-star">
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-line"></i>
                                 <i class="ri-star-line"></i>
                             </div>
-                            <p>50 reseñas</p>
+                            <p class="card__rating-review">50 reseñas</p>
                         </div>
                     </div>
                 </div>
@@ -202,20 +202,20 @@
                         <span class="tag card__tag">Cena</span>
                     </div>
                     <div class="card__info">
-                        <div>
-                            <h4>Filete Premium</h4>
-                            <p><small>$</small>45</p>
+                        <div class="news__header">
+                            <h4 class="news__title">Filete Premium</h4>
+                            <p class="card__price"><small>$</small>45</p>
                         </div>
-                        <div>
-                            <h6>3.5/5</h6>
-                            <div>
+                        <div class="card__rating">
+                            <h6 class="card__rating-title">3.5/5</h6>
+                            <div class="card__rating-star">
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-line"></i>
                                 <i class="ri-star-line"></i>
                             </div>
-                            <p>86 reseñas</p>
+                            <p class="card__rating-review">86 reseñas</p>
                         </div>
                     </div>
                 </div>
@@ -226,20 +226,20 @@
                         <span class="tag card__tag">Cena</span>
                     </div>
                     <div class="card__info">
-                        <div>
-                            <h4>Cena de mar</h4>
-                            <p><small>$</small>86</p>
+                        <div class="news__header">
+                            <h4 class="news__title">Cena de mar</h4>
+                            <p class="card__price"><small>$</small>86</p>
                         </div>
-                        <div>
-                            <h6>4.2/5</h6>
-                            <div>
+                        <div class="card__rating">
+                            <h6 class="card__rating-title">4.2/5</h6>
+                            <div class="card__rating-star">
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-line"></i>
                             </div>
-                            <p>44 reseñas</p>
+                            <p class="card__rating-review">44 reseñas</p>
                         </div>
                     </div>
                 </div>
@@ -250,20 +250,20 @@
                         <span class="tag card__tag">Desayuno</span>
                     </div>
                     <div class="card__info">
-                        <div>
-                            <h4>Hamburguesa</h4>
-                            <p><small>$</small>20.50</p>
+                        <div class="news__header">
+                            <h4 class="news__title">Hamburguesa</h4>
+                            <p class="card__price"><small>$</small>20.50</p>
                         </div>
-                        <div>
-                            <h6>4.3/5</h6>
-                            <div>
+                        <div class="card__rating">
+                            <h6 class="card__rating-title">4.3/5</h6>
+                            <div class="card__rating-star">
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-line"></i>
                             </div>
-                            <p>98 reseñas</p>
+                            <p class="card__rating-review">98 reseñas</p>
                         </div>
                     </div>
                 </div>
@@ -274,20 +274,20 @@
                         <span class="tag card__tag">Almuerzo</span>
                     </div>
                     <div class="card__info">
-                        <div>
-                            <h4>Sopa fría</h4>
-                            <p><small>$</small>34.20</p>
+                        <div class="news__header">
+                            <h4 class="news__title">Sopa fría</h4>
+                            <p class="card__price"><small>$</small>34.20</p>
                         </div>
-                        <div>
-                            <h6>4.5/5</h6>
-                            <div>
+                        <div class="card__rating">
+                            <h6 class="card__rating-title">4.5/5</h6>
+                            <div class="card__rating-star">
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-fill"></i>
                                 <i class="ri-star-line"></i>
                             </div>
-                            <p>64 reseñas</p>
+                            <p class="card__rating-review">64 reseñas</p>
                         </div>
                     </div>
                 </div>
@@ -304,19 +304,19 @@
             <article class="section__container">
                 <div class="section_events">
                     <div class="event">
-                        <img class="event__image" src="./assets/images/news/news06.jpg" alt="">
+                        <img class="event__image" src="./assets/images/news/news06.jpg" alt="mujer joven comiendo">
                         <span class="tag event__tag">Presentando</span>
                         <h5 class="event__title">Consejos para un estilo de vida saludable y una vida feliz</h5>
                     </div>
                     <div class="event">
-                        <img class="event__image" src="./assets/images/news/news07.jpg" alt="">
+                        <img class="event__image" src="./assets/images/news/news07.jpg" alt="foto de una cena">
                         <span class="tag event__tag">Presentando</span>
                         <h5 class="event__title">Como hacer una comida saludable</h5>
                     </div>
                 </div>
                 <div class="section_news">
                     <div  class="news">
-                        <img class="news__image" src="./assets/images/news/news04.jpg" alt="">
+                        <img class="news__image" src="./assets/images/news/news04.jpg" alt="imagen de coco">
                         <div class="card__info">
                             <div class="news__header">
                                 <h4 class="news__title">¿El coco es bueno para tí?</h4>
@@ -328,7 +328,7 @@
                         </div>
                     </div>
                     <div  class="news">
-                        <img class="news__image" src="./assets/images/news/news01.jpg" alt="">
+                        <img class="news__image" src="./assets/images/news/news01.jpg" alt="plato de salmon">
                         <div class="card__info">
                             <div class="news__header">
                                 <h4 class="news__title">Fideos de filet de salmón</h4>
@@ -339,7 +339,7 @@
                         </div>
                     </div>
                     <div  class="news">
-                        <img class="news__image" src="./assets/images/news/news05.jpg" alt="">
+                        <img class="news__image" src="./assets/images/news/news05.jpg" alt="persona comiendo ensalada">
                         <div class="card__info">
                             <div class="news__header">
                                 <h4 class="news__title">Hacer una ensalada saludable</h4>
