fix validator errors

--- a/pages/story.html
+++ b/pages/story.html
@@ -183,7 +183,7 @@
             <p class="story__newsletter-text">
               Noticias de comidas todos los días
             </p>
-            <form action="" id="form-story">
+            <form action="#" id="form-story">
               <div class="story__newslatter-input">
                 <input type="email" class="story_newslater-email" placeholder="Tu correo" id="story-email" />
                 <span id="contact-emailError" class="error"></span>
