final[backend] final version

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" 
     rel="stylesheet" />
     <link rel="shortcut icon" href="./assets/favicon.png" type="image/png">
-    <title>Flippo - Resto & Bar gourmet</title>
+    <title>Filippo - Resto & Bar gourmet</title>
     <meta name="description" content="Filippo: Restaurante y bar en un lugar muy agradable que ofrece almuerzos y cenas variadas de calidad gourmet. Elaboramos nuestros platos con ingredientes frescos y sanos, incluyendo opciones vegetarianas y veganas.">
     <meta name="keywords" content="Filippo, restaurante, bar, almuerzo, cena, gourmet, ingredientes frescos, comida saludable, comida vegetariana, comida vegana, Buenos Aires">
     <meta property="og:title" content="Filippo - Restaurante y Bar" />
